Build against Lucene 9
Mostly package renames in solr/lucene, but also added a class that
appears to be missing from upstream.